gitops/platform-apps/cloudtty/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudtty
  namespace: cloudtty-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloudtty.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: cloudshell-cloudtty-shell
          port: 7681
  tls: {}
